fix: gap row-slide

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -1900,7 +1900,7 @@ main{
           bottom: 1.2rem;
           padding-left: 1.2rem;
           padding-right: 1.2rem;
-          gap: 1rem;
+          gap: .7rem;
           button{
             border-radius: 3.125rem;
             svg{
